<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Журнал «Я»</string>
    <string name="action_settings">Настройки</string>
    <string name="action_update">Обновить</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="article_list">Список статей</string>
    <string name="no_data">Нет данных</string>
    <string name="previous_page">Предыдущая страница</string>
    <string name="next_page">Следующая страница</string>
    <string name="share">Поделиться</string>
    <string name="no_connection">Нет соединения</string>

    <string-array name="menu_items">
        <item>Статьи</item>
        <item>Рубрики</item>
        <item>Архив</item>
        <item>Журналы</item>
        <item>О журнале</item>
        <item>Контакты</item>
        <item>Для рекламодателей</item>
    </string-array>

    <string name="web_site">Веб-сайт: </string>
    <string name="site">http://i-mag.by</string>
    <string name="mail_address_txt">Адрес для писем:</string>
    <string name="address">220004, Минск, ул.Замковая, 27 адм. пом. 7, каб. 15</string>
    <string name="phones">Телефоны:</string>
    <string name="phone_1">+375 17 30 60 185</string>
    <string name="phone_2">+375 17 30 60 187</string>
    <string name="fax_txt">Факс:</string>
    <string name="fax_number">+375 17 203 37 12</string>
    <string name="e_mail_txt">e-mail: </string>
    <string name="e_mail">info@i-mag.by</string>
    <string name="show_map">Показать на карте</string>
    <string name="mag_about">Журнал о человеке и сферах его интересов</string>
    <string name="about1">Зачем мы это делаем</string>
    <string name="about2">В жизни остается так мало времени для того,
        чтобы тратить его на просмотр и чтение бестолковых журналов
        (или той чуши, которую некоторые называют журналами).
        Редакция журнала «Я» знает об этом не понаслышке.
        Именно поэтому мы сделали для вас (и для себя) ИНТЕРЕСНЫЙ журнал.</string>
    <string name="about3">О чем издание</string>
    <string name="about4">О человеке и о том, что его интересует: от музыки до кино,
        от секса до политики, от спорта до охоты и рыбалки, от военного космоса до роботов,
        от мотоциклов до автомобилей. И прочее и прочее. Тогда мы идем к вам! </string>

    <string name="adv_phones_txt">Телефоны отдела рекламы:</string>
    <string name="adv_text_main">РУКОВОДИТЕЛЬ ОТДЕЛА РЕКЛАМЫ</string>
    <string name="adv_phone_1">+375 17 30 60 185</string>
    <string name="adv_phone_2">+375 17 30 60 187</string>
    <string name="name1">Виктор Радьков</string>
    <string name="name1_phone">+375 296 899 890</string>
    <string name="name2">Марина Касперович</string>
    <string name="name2_phone">+375 29 684 10 28</string>
    <string name="name3">Марина Лазакович</string>
    <string name="name3_phone">+375 29 311 76 81</string>
    <string name="name4">Ольга Филиппова</string>
    <string name="name4_phone">+375 29 607 95 79</string>
    <string name="name5">Наталья Куцан</string>
    <string name="name5_phone">+375 296 269 990</string>
    <string name="price_list">Прайс-лист</string>
    <string name="go_to">Перейти к странице</string>
    <string name="clear_cache">Очистить кэш</string>
    <string name="clear_cache_key">clearCacheKey</string>

    <string name="preferences">Настройки</string>
    <string name="pref_mag_style_category">Способ просмотра журналов</string>
    <string name="pref_mag_style_summary">summary</string>
    <string name="pref_mag_style_key">magViewPrefs</string>
    <string-array name="pref_mag_styles">
        <item>Жесты</item>
        <item>Кнопки</item>
    </string-array>
    <string-array name="pref_mag_style_values">
        <item>200</item>
        <item>100</item>
    </string-array>
    <string name="pref_mag_image_load_title">Метод загрузки изображений</string>
    <string name="pref_mag_image_load_key">magImageLoadKey</string>
    <string-array name="pref_mag_image_load_types">
        <item>Picasso</item>
        <item>ImageLoader</item>
    </string-array>
    <string-array name="pref_mag_image_load_values">
        <item>10</item>
        <item>20</item>
    </string-array>

</resources>
