<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="ifRoom"
        android:title="@string/action_update"/>


    <item
        android:id="@+id/action_prev"
        android:icon="@android:drawable/ic_media_previous"
        android:showAsAction="always"
        android:title="@string/previous_page"/>

    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:showAsAction="always"
        android:title="@string/next_page"/>

</menu>
