<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mail_address_txt"
            android:id="@+id/tvMailTxt"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textStyle="italic"
            android:typeface="serif"
            android:background="@color/text_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/address"
            android:id="@+id/tvAddress"
            android:layout_below="@+id/tvMailTxt"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phones"
            android:id="@+id/tvPhonesTxt"
            android:background="@color/text_back"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="italic"
            android:typeface="serif"
            android:layout_below="@+id/tvAddress"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/phone_1"
            android:id="@+id/tvPhone1"
            android:layout_below="@+id/tvPhonesTxt"
            android:layout_alignParentLeft="true"
            android:phoneNumber="true"
            android:autoLink="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/phone_2"
            android:id="@+id/tvPhone2"
            android:autoLink="phone"
            android:layout_below="@+id/tvPhone1"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fax_txt"
            android:id="@+id/tvFaxTxt"
            android:background="@color/text_back"
            android:layout_below="@+id/tvPhone2"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="43dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fax_number"
            android:id="@+id/tvFaxNum"
            android:layout_below="@+id/tvFaxTxt"
            android:layout_alignParentLeft="true"
            android:phoneNumber="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/e_mail_txt"
            android:id="@+id/tvEmailTxt"
            android:layout_below="@+id/tvFaxNum"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/e_mail"
            android:id="@+id/tvEmail"
            android:layout_alignTop="@+id/tvEmailTxt"
            android:layout_toRightOf="@+id/tvEmailTxt"
            android:layout_marginLeft="5dp"
            android:autoLink="email" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_map"
            android:id="@+id/btnmap"
            android:layout_below="@+id/tvEmailTxt"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="23dp" />
    </RelativeLayout>
</ScrollView>