<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/padding_all">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about1"
        android:id="@+id/tvAbout1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@color/text_back"
        android:textStyle="italic"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about2"
        android:id="@+id/tvAbout2"
        android:layout_below="@+id/tvAbout1"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about3"
        android:id="@+id/tvAbout3"
        android:layout_below="@+id/tvAbout2"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="23dp"
        android:background="@color/text_back"
        android:textStyle="italic"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about4"
        android:id="@+id/tvAbout4"
        android:layout_below="@+id/tvAbout3"
        android:layout_alignParentLeft="true" />
</RelativeLayout>